# coco-flow

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh-CN.md  install.sh  pyproject.toml
desktop/: README.md  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
docs/: TODO.md  chrome-extension-gateway-mvp-plan.md  code-v2-design.md  daemon-streaming-notes.md  design-quality-optimization-tasks.md  design-supervisor-agent-proposal.md  design-v2-design.md  electron-mvp-plan.md  engine-quality-speed-optimization.md  knowledge-generation-engine.md  knowledge-model-draft.md  knowledge-to-skills-migration-plan.md  knowledge-ui-design.md  plan-engine.md  plan-output-structure.md  plan-schema-spec.md  plan-task-structure.md  plan-v2-design.md  prompt-system-design.md  refine-engine.md  refine-output-structure.md  refine-stage-session-design.md  refine-streaming-preview-ui.md  refine-v2-design.md  refine-v2-implementation-slices.md  remote-connect-ssh-plan.md  schema-simplification.md  stage-output-boundary-design.md  stage-output-boundary-implementation.md
scripts/: install-remote.sh
tests/: test_acp_client.py  test_api_meta.py  test_cli_prd_run.py  test_cli_remote_commands.py  test_cli_remote_runtime.py  test_cli_setup_commands.py  test_daemon_streaming.py  test_diagnostics.py  test_knowledge_generation.py  test_knowledge_store.py  test_plan_agent_io.py  test_plan_readiness.py  test_prompts.py  test_skill_store.py  test_task_code.py  test_task_detail_presenter.py  test_task_input.py  test_task_plan.py  test_task_plan_pipeline.py  (+2 more)
(+452 files in other folders)
